2009-07-30  Sebastian Marsching <sebastian.marsching@1und1.de>

	Support for page flow variant extension points.

2009-07-27  Martin Leidig  <mleidig@schlund.de>

	Fixed possible deadlock within SessionEndNotificator when
	one thread adds a SessionListener after getting a lock to an
	application object, while another thread is invalidating
	the session and calls a registered SessionListener, which itself
	tries to lock the same application object.

2009-07-24  Sebastian Marsching <sebastian.marsching@1und1.de>

	Added code to load the configuration for a module application context.

	Added more code for page flow extension points.

	Made Pustefix Context available and register request and session
	scope in module's application context.

2009-07-23  Sebastian Marsching <sebastian.marsching@1und1.de>

	Added base classes for extension point support and very first part
	of the extension points for page flows.

2009-07-16  Sebastian Marsching <sebastian.marsching@1und1.de>

	Removed pustefix-osgi-spring-dm bundle and moved classes to 
	pustefix-core.

	Support for file: URIs

	Removed code for building pustefix-core-*-data.jar.

2009-07-10  Sebastian Marsching <sebastian.marsching@1und1.de>

	Introduced pustefixcore scheme for access to core XML files.

	Create modified implementation of ScopedProxyUtils / ScopedProxyFactoryBean
	that uses class loader of target bean class.

	Refactored resource handling in target generator.

	Support for "persistentstorage:"-URIs providing access to the
	persistent storage area of the OSGi container.

2009-07-09  Martin Leidig  <mleidig@schlund.de>

	Re-added forgotten defaultflow config option for pagerequests.

2009-07-03  Sebastian Marsching <sebastian.marsching@1und1.de>

	First part of new resource framework:
	Base classes and bundle resource loader implementation.

2009-06-30  Martin Leidig  <mleidig@schlund.de>

	Return null instead of throwing a NPE when calling
	ContextResourceManager.getResource for unconfigured